--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<style type="text/css">
 			h1{
-				padding-top:10px ;
-				padding-right: 10px;
-				color: #BD4B4B;
+/* 				padding-top:10px ;
+				padding-right: 10px; */
+				color: #299ce3;
 				text-align: center;
 				font-family: 'CoreCircus', sans-serif;
 				text-transform: uppercase;
