--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 				
 			</form>
 			
+		</header>
 			<div class="btn" style="justify-content: center;align-content: center;display: flex;padding: 10px 10px;">
-				<button type="button" class="trendBtn" id="trend">Trending TV Shows</button>
+				<button type="button" class="trendBtn" id="trend">Trending on TV</button>
 				<button type="button" class="trendBtn" id="trMovie">Trending Movies</button>
 				<button type="button" class="trendBtn" id="engMovie">English</button>
 				<button type="button" class="trendBtn" id="hinMovie">Hindi</button>
 				<button type="button" class="trendBtn" id="hinTV">Hindi TV shows</button>
 			</div>
-		</header>
 		<div id="tags">
 			<div class="tag">Action</div>
 			<div class="tag">Adventure</div>
@@ -96,6 +96,7 @@
 			<div class="current" id="current">1</div>
 			<div class="page" id="next">></div>
 		</div>
+		<hr style=" width: 5%; border-style: dotted none none none; border-top: 10px dotted grey ; margin-top: 0;">
 		<script type="text/javascript" src="script.js"></script>
 	</body>
-</html
+</html>
